[Unimportant] [+] Since it's not anymore like a proof-of-concept but an actual project, I added a little intro into the program. [+] Added ThreadJacker.svg for README.

--- a/ThreadJacker/ThreadJacker.vcxproj
+++ b/ThreadJacker/ThreadJacker.vcxproj
@@ -137,6 +137,9 @@
     </MASM>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Images\ThreadJacker.svg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="$(VCTargetsPath)\BuildCustomizations\masm.targets" />
