--- a/ThreadJacker/ThreadJacker.vcxproj.filters
+++ b/ThreadJacker/ThreadJacker.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>Kaynak Dosyaları</Filter>
     </MASM>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Images\ThreadJacker.svg" />
+  </ItemGroup>
 </Project>
