Improvements [+] Implemented 32-bit compatibility. [+] Changed some functionality to improve overall performance.

--- a/ThreadJacker/ThreadJacker.vcxproj
+++ b/ThreadJacker/ThreadJacker.vcxproj
@@ -134,6 +134,10 @@
   <ItemGroup>
     <MASM Include="assembly.asm">
       <FileType>Document</FileType>
+      <UseSafeExceptionHandlers Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</UseSafeExceptionHandlers>
+      <UseSafeExceptionHandlers Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</UseSafeExceptionHandlers>
+      <UseSafeExceptionHandlers Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</UseSafeExceptionHandlers>
+      <UseSafeExceptionHandlers Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</UseSafeExceptionHandlers>
     </MASM>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
